minor edit to paper

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -61,7 +61,7 @@ University of Southern California}
 \bigskip
 
 \begin{abstract}
-\noindent This paper quantifies and aggregates the multiple life-cycle benefits of an influential high-quality early childhood program with outcomes measured through midlife. Guided by economic theory, we supplement experimental data with non-experimental data to forecast the life-cycle benefits and costs of the program. Our point estimate of the internal rate of return is 13.7\% with an associated benefit/cost ratio of 7.3. We account for model estimation and forecasting error and present estimates from extensive sensitivity analyses. This paper is a template for synthesizing experimental and non-experimental data using economic theory to estimate the long-run life-cycle benefits of social programs.
+\noindent This paper quantifies and aggregates the multiple lifetime benefits of an influential high-quality early childhood program with outcomes measured through midlife. Guided by economic theory, we supplement experimental data with non-experimental data to forecast the life-cycle benefits and costs of the program. Our point estimate of the internal rate of return is 13.7\% with an associated benefit/cost ratio of 7.3. We account for model estimation and forecasting error and present estimates from extensive sensitivity analyses. This paper is a template for synthesizing experimental and non-experimental data using economic theory to estimate the long-run life-cycle benefits of social programs.
 \end{abstract}
 
 \noindent \textbf{Keywords}: Early childhood education, life-cycle benefits, long-term forecasts, program evaluation, rates of return, cost-benefit analysis \\
@@ -103,7 +103,7 @@ Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
 
 This paper investigates the social benefits and costs of an influential pair of essentially identical early childhood programs conducted in North Carolina that targeted disadvantaged children. The Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE)---henceforth ABC/CARE---were evaluated by randomized control trials. Both programs were launched in the 1970s. Participants were followed through their mid 30s. The programs started early in life (at 8 weeks of life) and engaged participants until age 5. They generated numerous positive treatment effects.\footnote{A companion paper, \citet{Garcia_Heckman_Ziff_2018_EER}, reports these treatment effects. Participants in ABC/CARE benefit in terms of both cognitive and socio-emotional skills, education, employment and labor income, and risky behavior and health. The parents of participants benefit in terms of labor income and education.} Parents of participants (primarily mothers) received free childcare that facilitated parental employment and adult education. The program has a $13.7\%$ (s.e.\ $3\%$) per-annum tax-adjusted internal rate of return and a $7.3$ (s.e.\ $1.84$) tax-adjusted benefit/cost ratio.
 
-The program is a prototype for many programs planned or in place today.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: Infant Health and Development Program (IHDP) in eight different cities in the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Current Educare programs in the U.S. are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}. Appendix~\ref{app:details-educare} lists these Educare programs, all of which implement curricula based on ABC/CARE.} About 19\% of all African-American children would be eligible for ABC/CARE today.\footnote{43\% of African-American children were eligible at its inception.} Implementation of the ABC/CARE program in disadvantaged populations would be an effective, socially efficient policy for promoting social mobility.\footnote{\citet{Garcia_2016_National-Implementation-ECI} estimate that if ABC/CARE were implemented on the current stock of eligible children, the intra-black gap (black disadvantaged relative to black advantaged) in high-school graduation, years of education, employment and labor income at age 30 for females would be reduced by $110\%$, $76\%$, $22\%$, and $30\%$, respectively. It would eradicate the black--white high-school graduation gap, reduce the years of education gap to 0.12 years, reduce the employment gap to 14 percentage points, and reduce the labor income gap to 4,075 USD (2014). For males, the program would eradicate the intra-black high-school graduation gap, reduce the years of education gap to 0.18 years, and reduce the employment gap to 9 percentage points.}
+The program is a prototype for many programs planned or in place today.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: Infant Health and Development Program (IHDP) in eight different cities in the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Current Educare programs in the U.S. are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}. Appendix~\ref{app:details-educare} lists these Educare programs, all of which implement curricula based on ABC/CARE.} About 19\% of all African-American children would be eligible for ABC/CARE today.\footnote{43\% of African-American children were eligible at its inception.} Implementation of the ABC/CARE program in disadvantaged populations would be an effective, socially efficient policy for promoting social mobility.\footnote{\citet{Garcia_2016_National-Implementation-ECI} estimate that if ABC/CARE were implemented on the current stock of eligible children, the intra-black gap (black disadvantaged relative to black advantaged) in high-school graduation, years of education, employment and labor income at age 30 for females would be reduced by $110\%$, $76\%$, $22\%$, and $30\%$, respectively. It would eradicate the intra-black high-school graduation gap, reduce the years of education gap to 0.12 years, reduce the employment gap to 14 percentage points, and reduce the labor income gap to 4,075 USD (2014). For males, the program would eradicate the intra-black high-school graduation gap, reduce the years of education gap to 0.18 years, and reduce the employment gap to 9 percentage points.}
 
 This paper addresses a fundamental problem that arises in evaluating social programs. Few program evaluations have complete life-cycle histories of participants. In our data, the oldest experimental subject is in his/her mid 30s. At issue is determining the life-cycle impact of the program. We forecast the full life-cycle benefits and costs of the program using non-experimental data guided by economic theory.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} discuss data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g.,\ \citealp{Prentice_1989_Surrogate_SiM}). However, as noted below, exogeneity is an integral part of the models we estimate, although it is not considered in the statistics literature. That literature does not provide testable predictions for validation of its forecasts as we do.}
 
@@ -113,7 +113,7 @@ We construct synthetic cohorts from non-experimental samples. The cohorts are ch
 
 Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data enhances the information available from social experiments. Using economic theory and econometric methods to generate empirically concordant forecasts enhances the credibility of the procedure.
 
-The quest for long-run estimates from experiments with short-term follow-up has recently led to application of informal procedures for estimating long-term benefits using short-term measures of childhood test scores \citep[e.g.][]{Chetty_Friedman_etal_2011_QJoE,Kline_Walters_2016_QJE}. We show by example that these procedures can give very misleading estimates of true life cycle program benefits by focusing on earnings, not counting the full array of benefits generated, and relying solely on test scores to predict earnings.
+The quest for long-run estimates from experiments with short-term follow-up has recently led to application of informal procedures for estimating long-term benefits using short-term measures of childhood test scores \citep[e.g.][]{Chetty_Friedman_etal_2011_QJoE,Kline_Walters_2016_QJE}. We show by example that these procedures can give very misleading estimates of true life cycle program benefits by focusing on earnings, not counting the full array of benefits generated, and relying solely on test scores to predict future earnings.
 
 This paper proceeds in the following way. Section~\ref{section:background} describes the ABC/CARE program. Section~\ref{section:cbamethodology} discusses our methodology for forecasting life-cycle outcomes and the evidence supporting our assumptions. To make matters concrete, we consider in detail how we forecast life cycle labor income. Section~\ref{section:cbapractice} discusses how we forecast other life-cycle outcomes. Section~\ref{section:cbaresults} reports baseline estimates of internal rates of return and benefit/cost ratios and reports an array of sensitivity analyses. Section~\ref{section:bcaestimates} uses our estimates to examine the predictive validity of widely used informal forecasting methods. Section~\ref{section:conclusion} summarizes our findings.
 
@@ -203,11 +203,11 @@ To make the discussion specific, we now consider how one can use this framework 
 
 \subsection{Forecasting Labor Income} \label{sec:forecasting}
 
-\noindent \textbf{Step 1.\ Constructing a Synthetic Cohort.} We use the Children of the National Longitudinal Survey of Youth (CNLSY) to construct a synthetic cohort from ages 21 to 29 based on similarity with the baseline variables in the experimental samples ($\bm{B}$). We use both the National Longitudinal Survey of Youth 1979 (NLSY79) and the Panel Study of Income Dynamics (PSID) to construct a synthetic cohort from ages 29 to 67. Whenever we use the NLSY79 and PSID together, we combine samples. Thus we use three non-experimental datasets to obtain information across the life cycle. We satisfy support conditions.\footnote{See Appendix~\ref{app:containsupport}.}
+\noindent \textbf{Step 1.\ Constructing a Synthetic Cohort.} We use the Children of the National Longitudinal Survey of Youth (CNLSY) to construct a synthetic cohort from ages 21 to 29 using similarity with the baseline variables in the experimental samples ($\bm{B}$). We use both the National Longitudinal Survey of Youth 1979 (NLSY79) and the Panel Study of Income Dynamics (PSID) to construct a synthetic cohort from ages 29 to 67. Whenever we use the NLSY79 and PSID together, we combine samples. Thus we use three non-experimental datasets to obtain information across the life cycle. We satisfy support conditions.\footnote{See Appendix~\ref{app:containsupport}.}
 
 Because we do not observe each element of the eligibility index discussed in Section~\ref{section:background}, we approximate $\bm{B}_{n} \in \mathcal{B}_0$. We delimit the sample to include observations satisfying the following criteria: (i) \textbf{NLSY79:} Black, labor income less than \$300,000 (2014 USD) in any given year, birth year between 1957 and 1965; (ii) \textbf{PSID:} Black, labor income less than \$300,000 (2014 USD), birth year between 1945 and 1981; and (iii) \textbf{CNLSY:} Black, labor income less than \$300,000 (2014 USD) in any given year, birth year between 1978 and 1983.
 
-We weight individuals in the non-experimental samples according to their resemblance to individuals in the experimental sample.\footnote{We use Mahalanobis' matching Algorithm~\ref{alg:match} and weights derived from the Mahalanobis distances (downsizing dissimilar observations). See Appendix~\ref{appendix:methodology} for details.} We match on baseline pre-treatment match variables: year of birth, gender, and number of siblings at baseline. All are available in the non-experimental datasets. This procedure generates a synthetic cohort in the non-experimental sample for subsequent analysis in our structural forecasting procedure.
+We weight individuals in the non-experimental samples according to their resemblance to individuals in the experimental sample.\footnote{We use Mahalanobis' matching Algorithm~\ref{alg:match} and weights derived from the Mahalanobis distances that downweight dissimilar observations. See Appendix~\ref{appendix:methodology} for details.} We match on baseline pre-treatment match variables: year of birth, gender, and number of siblings at baseline. All are available in the non-experimental datasets. This procedure generates a synthetic cohort in the non-experimental sample for subsequent analysis in our structural forecasting procedure.
 
 By design, there is no treatment effect in the non-experimental sample. Matching to the experimental sample is executed using baseline variables not affected by treatment in the experimental sample. Figure~\ref{figure:controltests} demonstrates that the synthetic cohort is comparable to the control group of the experiment. At age 30, average observed labor income for the control group in the experimental sample coincides with average labor income for the synthetic cohort.\footnote{We observe labor income in the experimental samples at ages 21 and 30. We use the data at age 21 to initialize our forecasting model and hence cannot use it for testing our forecast.}
 
@@ -243,7 +243,7 @@ Below we discuss how this condition can be weakened and unbiased forecasts can s
 
 To appreciate the benefit of Assumption~\ref{ass:exog}, consider the following example. Suppose that years of education is a component of $\bm{X}^{d'}_{k,{a'}}$. The joint distribution of $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}^{d'}_{k,{a'}}$ can differ substantially across experimental and non-experimental samples. In the experimental sample, years of education are boosted by treatment, which is randomly assigned. In the non-experimental samples, however, there is no experimental variation. Individuals with high observed levels of education could have high values of $\bm{\varepsilon}_{k,a}^d$ due to omitted ability. This creates a fundamentally different dependence between $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}_{k,{a'}}^{d'}$ in the non-experimental sample. Assumption~\ref{ass:exog} avoids this problem when making forecasts. Below, we establish that our forecasts based on this assumption are concordant with forecasts from approaches that do not necessarily require Assumption~\ref{ass:exog}.
 
-\textbf{Step 3. Determining Inputs.} Analysis of the non-experimental data reveals that the inputs determining labor income under Assumption~\ref{ass:exog} are: average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income. Appendix Table~\ref{table:predlaborincome} shows that these variables predict labor income. Appendix~\ref{app:containsupport} shows that there is common support across datasets. We report tests for endogeneity of these variables in the experimental and auxiliary samples used in this paper in Appendix~\ref{app:endogeneity}.\footnote{These tests are based on the assumption that $\bm{\varepsilon}_{k,a}^d, k \in \{e,n\}$, follow a factor structure. Factors are predicted by measurements on cognitive and non-cognitive skills controlling for the factor using a variety of methods. We do not reject the null of exogeneity. See Appendix~\ref{app:endogeneity}. Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \citet{Cunha_Heckman_2008_JHR} and \citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}. Our test follows that in \citet{Heckman_Pinto_etal_2013_PerryFactor}.} After conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity. Accordingly, we use OLS for making our baseline estimates.
+\textbf{Step 3. Determining Inputs.} Analysis of the non-experimental data reveals that the inputs determining labor income under Assumption~\ref{ass:exog} are: average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income. Appendix Table~\ref{table:predlaborincome} shows that these variables predict labor income. Appendix~\ref{app:containsupport} shows that there is common support across datasets. We report tests for endogeneity of these variables in the experimental and auxiliary samples used in this paper in Appendix~\ref{app:endogeneity}.\footnote{These tests are based on the assumption that $\bm{\varepsilon}_{k,a}^d$ for $k \in \{e,n\}$ is characterized by a factor structure. The factors are predicted by measurements of cognitive and non-cognitive skills. We use estimated factors as control functions. We do not reject the null of exogeneity. See Appendix~\ref{app:endogeneity}. Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \citet{Cunha_Heckman_2008_JHR} and \citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}.} After conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity. Accordingly, we use OLS for making our baseline estimates.
 
 Table~\ref{table:summint} displays the treatment effects of the program for these inputs.\footnote{We first present raw treatment-control mean differences. As we report in Table~\ref{table:summint}, the treatment effects are substantial across multiple outcomes. In some cases, this finding is at odds with what other studies report \citep{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. The difference is explained, mainly, by the fact that we consider effects by gender.  Only \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} consider treatment effects by gender. They focus on health effects and find that men have many more positive effects especially in cardiovascular and metabolic conditions if compared to women. This is consistent with the results we report below.} Assignment to treatment has statistically and economically significant causal effects on the inputs generating final outcome treatment effects. Our forecasted treatment effects are based on these program-induced changes in inputs. For females, it increases the average PIAT score by almost one third of a standard deviation.\footnote{The test is standardized to an in-sample standard deviation of 15 units.} For males, the effect is almost half of a standard deviation. The program substantially boosts high school graduation for females and college graduation for both males and females. We use years of education attained to summarize both effects in a measure that is comparable across genders. Labor income at age 21 for girls is not greatly boosted by the program. This arises in part because treated girls are more likely to be enrolled in college at age 21 and thus do not work at that age. The program boosts annual labor income, especially for males, for whom the average treatment effect at age 30 is almost 20,000 (2014 USD).\footnote{Table~\ref{table:summint} displays age-21 and age-30 labor income because labor income is observed at ages 21 and 30 in the experimental sample. Labor income at age 30 is an input in our methodology only after age 30.}
 
@@ -419,9 +419,9 @@ Note: Panel (a) displays the forecast life-cycle labor income profiles for ABC/C
 
 \noindent An alternative non-parametric forecasting method compresses the whole forecasting procedure. Under Assumptions~\ref{ass:summary} and~\ref{ass:exog}, we can use matching on baseline variables and \emph{variables affected by treatment} to construct counterparts to the experimental treatment and control groups in the non-experimental sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} discuss this procedure.} Matching is a non-parametric estimation procedure for conditional mean functions. Matching creates direct counterparts in the auxiliary sample for \textit{each member} of the experimental sample. Instead of estimating a model for the life-cycle profile of labor income and forecasting from it, we directly use the counterpart matched profiles.\footnote{See Appendix~\ref{appendix:nonpar} for details.} This is an intuitively appealing non-parametric estimator of life-cycle program treatment effects that is valid under exogeneity \citep{Heckman_Navarro_2004_REStat}.
 
-This is a fundamentally different matching procedure than what is used to construct the synthetic cohort in Step 1. In the main analysis of this paper, we match on baseline variables  not affected by treatment to construct a synthetic cohort with $\bm{B} \in \mathcal{B}_0$. Using these samples, we estimate production functions on this cohort to forecast out-of-sample treatment effects. In contrast, in the analysis of this subsection, we match both on baseline variables $\bm{B}$ and on variables affected by treatment $\bm{X}_{k,a}^d$ compressing the construction of the synthetic cohort and the estimation of the production functions for out-of-sample forecasts to a single, non-parametric procedure.
+This is a fundamentally different matching procedure than what is used to construct the synthetic cohort in Step 1. In the main analysis of this paper, we match on baseline variables  not affected by treatment to construct a synthetic cohort with $\bm{B} \in \mathcal{B}_0$. Using these samples, we estimate production functions on this cohort to forecast out-of-sample treatment effects. In contrast, in the analysis of this subsection, we match both on baseline variables $\left( \bm{B} \right)$ and on variables affected by treatment $\left( \bm{X}_{k,a}^d \right)$ compressing the construction of the synthetic cohort and the estimation of the production functions for out-of-sample forecasts to a single, non-parametric procedure.
 
-Table~\ref{table:predsens} shows that there is close agreement between non-parametric estimates based on matching and the more parametric model-based approach previously presented. This reassuring concordance is consistent with exogeneity of inputs and structural invariance.\footnote{Note that the non-parametric estimates are more tightly estimated because there are fewer estimation steps. We are conservative in using the less precisely estimated forecast.}
+Table~\ref{table:predsens} shows that there is close agreement between non-parametric estimates based on matching and the more parametric model-based approach previously presented. This reassuring concordance is consistent with exogeneity of inputs and structural invariance.\footnote{Note that the non-parametric estimates are more tightly estimated because there are fewer steps in estimation. We are conservative in using the less precisely estimated forecasts in our main analysis.}
 
 \section{Forecasting Other Life-cycle Benefits} \label{section:cbapractice}
 
@@ -514,7 +514,7 @@ Accounting for the treatment substitutes available to controls also matters. Mal
 
 Our baseline estimates account for the deadweight loss caused by distortionary taxes collected to fund programs, plus the direct costs associated with collecting taxes.\footnote{When the transaction between the government and an individual is a direct transfer, we consider 0.5 as the cost per each transacted dollar. We do not weight the final recipient of the transaction (e.g., transfer income). When the transaction is indirect, we classify it as government spending as a whole and consider its cost as 1.5 per dollar spent (e.g., public education).} We assume a marginal tax rate of $50\%$.\footnote{\citet{Feldstein_1999_REStat} estimates that the deadweight loss caused by increasing existing tax rates (marginal deadweight loss) may exceed two dollars per dollar of revenue generated. We use a more conservative value (0.5 dollars per dollar of revenue generated). In Tables~\ref{table:bcsens}, \ref{table:irrsens}, and in  Appendix~\ref{appendix:varying-dwl}, we explore the robustness of this choice of the welfare cost and find little sensitivity.} Our estimates are robust to dropping it to $0\%$ or doubling it to $100\%$ (deadweight loss columns). Our baseline estimate of benefit/cost ratios is based on a discount rate of $3\%$. Not discounting roughly doubles our benefit/cost ratios, while they remain statistically significant using a higher discount rate of $7\%$ (discount rate columns).
 
-Parental labor income effects induced by the childcare subsidy are an important component of the benefit/cost ratio.\footnote{There is no inconsistency between the weak female treatment effects on wage at age 30 and the high lifetime net present value treatment effect for earnings given life-cycle wage growth attributable to enhanced inputs (education, PIAT scores, etc.).} We take a conservative approach in our baseline estimates and do not account for potential shifts in parental labor income profiles due to education and work experience subsidized by childcare (see the discussion in Section~\ref{section:pincome}). Our baseline estimates rely solely on parental labor income when participant children are ages 0 to 21. Alternative approaches considering the gain for the parents through age 67 generate an additional increase in the gain due to parental labor income (see parental labor income columns).\footnote{If labor markets operate without frictions and the marginal rate of substitution between leisure and consumption equals the marginal wage rate, parental labor income should not be valued at the margin. The bottom box of Figure~\ref{figure:vennpooled} shows that the benefit/cost ratio and the internal rate of return remain sizable in magnitude and statistically significant if we omit parental income from the benefits attributed to the program.}
+Parental labor income effects induced by the childcare subsidy are an important component of the benefit/cost ratio.\footnote{There is no inconsistency between the weak female treatment effects on wages at age 30 and the high lifetime net present value treatment effect for earnings given life-cycle wage growth attributable to enhanced inputs (education, PIAT scores, etc.).} We take a conservative approach in our baseline estimates and do not account for potential shifts in parental labor income profiles due to education and work experience subsidized by childcare (see the discussion in Section~\ref{section:pincome}). Our baseline estimates rely solely on parental labor income when participant children are ages 0 to 21. Alternative approaches considering the gain for the parents through age 67 generate an additional increase in the gain due to parental labor income (see parental labor income columns).\footnote{If labor markets operate without frictions and the marginal rate of substitution between leisure and consumption equals the marginal wage rate, parental labor income should not be valued at the margin. The bottom box of Figure~\ref{figure:vennpooled} shows that the benefit/cost ratio and the internal rate of return remain sizable in magnitude and statistically significant if we omit parental income from the benefits attributed to the program.}
 
 Individuals in ABC/CARE could experience positive cohort effects that might (i) make them more productive and therefore experience wage growth; (ii) experience a negative shock such as an economic crisis and therefore experience a wage decline. Our estimates are robust when we vary annual growth and decay rates in labor income between $-0.5\%$ and $0.5\%$. This is consistent with the range of values in \citet{Lagakos_Moll_etal_2016_LifeCycle_NBER}.
 
