update gender appendix from compilation error and clean repo

--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -15,7 +15,7 @@
 \newcommand{\notorth}{\ensuremath{\perp\!\!\!\!\!\!\diagup\!\!\!\!\!\!\perp}}%
 \newcommand{\notindep}{\notorth}
 
-\externaldocument{abc_treatmenteffects_appendix_2018-06-16a_jlg}
+\externaldocument{abc_treatmenteffects_appendix}
 \pagenumbering{roman}
 
 \begin{document}
@@ -38,7 +38,7 @@ The University of Chicago \and
 Anna L. Ziff \\
 Department of Economics \\
 Duke University}
-\date{First Draft: January 5, 2016\\ This Draft: \today \\}
+\date{First Draft: January 5, 2016\\ This Draft: July 20, 2018\\}
 
 \maketitle
 \thispagestyle{empty}
