--- a/abc_treatmenteffects_appendix.tex
+++ b/abc_treatmenteffects_appendix.tex
@@ -2,7 +2,7 @@
 \input{preambleappendix}
 \input{output/mainstatistics}
 
-\externaldocument{abc_treatmenteffects_2018-07-20a_jbb}
+\externaldocument{abc_treatmenteffects}
 
 \pagenumbering{roman}
 \renewcommand\theassumption{AA--\arabic{assumption}}
@@ -11,7 +11,7 @@
 \title{\Large \textbf{Appendix \\ Gender Differences in \\ the Benefits of an Influential Early Childhood Program}}
 
 \author{Jorge Luis Garc\'{i}a, James J. Heckman, and Anna L. Ziff}
-\date{\today}
+\date{July 20, 2018}
 
 
 \maketitle
