--- a/output/abccare-proportion-summary-full-rosenbaum.tex
+++ b/output/abccare-proportion-summary-full-rosenbaum.tex
@@ -11,7 +11,7 @@ Achievement & 12 & \textbf{0.833} &  \textbf{0.065} & \textbf{0.000} & 0.341 & \
 Socio-Emotional & 22 & 0.455 & 0.191 & 0.364 & 0.599 & \textbf{-0.091}  & 0.165 \\
 
 Parenting & 7 & 0.571 & 0.977  & 0.286 & 0.142 &  \textbf{-0.286}  &  0.477 \\
-Parental Income & 8 & 0.750 & 0.290 & 0.875 & 0.230  & \textbf{0.125}§  & \textbf{0.076} \\
+Parental Income & 8 & 0.750 & 0.290 & 0.875 & 0.230  & \textbf{0.125}  & \textbf{0.076} \\
 
 Education & 9 & 0.667 & 0.191  & \textbf{0.111} & 0.142 & \textbf{-0.556}  & \textbf{0.076} \\
 
