--- a/abc_comprehensivecba_appendix-pub.tex
+++ b/abc_comprehensivecba_appendix-pub.tex
@@ -18,6 +18,7 @@
 
 \externaldocument{abc_comprehensivecba_revised}
 \externaldocument{abc_comprehensivecba_answerstoreferees}
+\externaldocument{abc_comprehensivecba_answerstoreferees_secondround}
 
 \pagenumbering{roman}
 \renewcommand\theassumption{AA--\arabic{assumption}}
