--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -68,7 +68,6 @@ University of Southern California}
 \noindent \textbf{Keywords}: Early childhood education, life-cycle benefits, long-term forecasts, program evaluation, rates of return, cost-benefit analysis \\
 \noindent \textbf{JEL codes}: J13, I28, C93\\
 
-
 \bigskip
 \begin{tabular}{ll}
 Jorge Luis Garc\'{i}a                                          & James J. Heckman \\
@@ -120,11 +119,11 @@ This paper proceeds in the following way. Section~\ref{section:background} descr
 
 \section{ABC/CARE: Background} \label{section:background}
 
-\noindent The Carolina Abecedarian Project and the Carolina Approach to Responsive Education (ABC/CARE) were enriched childcare programs that targeted the early years of disadvantaged, predominately African-American children in Chapel Hill, Durham, and Raleigh in North Carolina.\footnote{Both ABC and CARE were designed and implemented by researchers at the Frank Porter Graham Center of the University of North Carolina in Chapel Hill.} Appendix~\ref{appendix:background} describes these programs in detail. We summarize their main features here.
+\noindent \textbf{[JLG: This paragraph slightly changed to assess comment 1 of referee 1.]} The Carolina Abecedarian Project and the Carolina Approach to Responsive Education (ABC/CARE) were enriched childcare programs that targeted the early years of disadvantaged, predominately African-American children in the area of Chapel Hill, North Carolina.\footnote{Both ABC and CARE were designed and implemented by researchers at the Frank Porter Graham Center of the University of North Carolina in Chapel Hill.} Appendix~\ref{appendix:background} describes these programs in detail. We summarize their main features here.
 
-The goal of these programs was to enhance the life skills of disadvantaged children. They supported language, motor, and cognitive development as well as socio-emotional competencies considered crucial for school success including task orientation, the ability to communicate, independence, and pro-social behavior.\footnote{\citet{Sparling_1974_Synth_Edu_Infant_SPEECH, Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_etal_1985_Project-CARE_TiECSE, Wasik_Ramey_etal_1990_CD, Ramey-etal_2012-ABC}.} They also provided free health screenings to treatment-group members with costs of medications borne by the parents.
+\textbf{[JLG: The two first sentences of this paragraph changed to assess comment 5 of referee 1, they include your edits to the initial modification that I proposed.]} These early childhood programs went well beyond regular care. They were high-quality, educationally-focused child care centers. Their goal was to enhance the life skills of disadvantaged children. They supported language, motor, and cognitive development as well as socio-emotional competencies considered crucial for school success including task orientation, the ability to communicate, independence, and pro-social behavior.\footnote{\citet{Sparling_1974_Synth_Edu_Infant_SPEECH, Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_etal_1985_Project-CARE_TiECSE, Wasik_Ramey_etal_1990_CD, Ramey-etal_2012-ABC}.} \textbf{[JLG: The rest of this paragraph changed to assess comment 2 of referee 1.]} All treatment children received medical check-ups that conformed with the American Academy of Pediatrics. Parents were notified if children had medical issues. The first cohort of the ABC control-group received similar services \citep{Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Henderson-et-al_1982_NEJoM}.
 
-The design and implementation of ABC and CARE were very similar. Both had two phases, the first of which lasted from birth until age 5. In this phase, children were randomly assigned to treatment. The second phase of the study consisted of home visits from ages 5 through 8 that were assigned by a second-stage randomization. The first phase of CARE, from birth until age 5, had an additional treatment arm of home visits designed to improve home environments.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.}
+\textbf{[JLG: This paragraph changed to assess comment 3 of referee 1.]} The design and implementation of ABC and CARE were very similar. Both had two phases. The first and main phase lasted from birth until age 5. In this phase, children were randomly assigned to treatment. The second phase of the study took place for the first three years of public school and supported children's academic development. It enhanced parental involvement in the education of the children. A home visit took place every two weeks and provided parents home activities to complement the skills taught at school. The visitor facilitated communication between the teachers and the parents \citep{Campbell_Ramey_1995_AERJ}. Children were assigned to this treatment through a second-stage randomization. The first phase of CARE, from birth until age 5, had an additional treatment arm of home visits designed to improve home environments.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.}
 
 ABC recruited four cohorts of children born between 1972 and 1976. CARE recruited two cohorts of children, born between 1978 and 1980. For both programs, families of potential participants were referred to researchers by local social service agencies and hospitals at the beginning of the mother's last trimester of pregnancy. Eligibility was determined by a score on a childhood ``risk index'' of disadvantage.\footnote{See  Appendix~\ref{app:eligibility-pop} for details on the construction of the ``risk index'' used to determine eligibility.}
 
@@ -132,7 +131,7 @@ Our analysis uses data from the first phase and pools the ABC treatment group wi
 
 The initial ABC sample consisted of 120 families. Due to attrition and non-response, the study sample was reduced to 114 subjects: 58 in the treatment group and 56 in the control group. In CARE, the initial sample had 65 families: 23 were randomized to a control group, 25 to a family education treatment group, and 17 to a center-based childcare treatment group that followed ABC protocols.\footnote{There were no randomization compromises in CARE. During preschool, 5 subjects attrited (3 in the treatment group, 1 in the family education group, and 1 in the control group). Details on attrition and non-response are presented in Appendix~\ref{appendix:randomization}.} We use standard weighting methodologies to account for attrition, non-response, and missing data.\footnote{See Appendix~\ref{app:method_partialobs}.}
 
-For both programs, data were collected annually on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics from birth until age 8. After age 8, data on cognitive and socio-emotional skills, education, and family economic characteristics were collected at ages 12, 15, 21, and 30.\footnote{At age 30, measures of cognitive skills are not available for both ABC and CARE.} In addition, there is information from administrative criminal records, and from a physician-administered medical survey, when the subjects were in their mid 30s.\footnote{See  Appendix~\ref{appendix:data} for a more comprehensive description of the data. There, we document the balance in observed baseline characteristics across the treatment and control groups after dropping the individuals for whom we have no crime or health information. There is substantial missing data for these outcomes, which we address using the methodology exposited in Appendix~\ref{appendix:methodology}.} Many control-group children in both ABC and CARE attended alternative formal childcare arrangements (75\% and 74\% respectively).\footnote{The alternative arrangements were generally lower quality than ABC/CARE (see Appendix~\ref{appendix:tetanus} for details). In our main analysis, we compare treatment- and control-group children, irrespective of take-up of alternatives. In Appendix~\ref{appendix:cbaresultscont}, we address the problem of substitution bias \citep{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE,Kline_Walters_2016_QJE}. We disaggregate our analysis to distinguish treatment effects by type of alternative selected by the control group.}
+\textbf{[JLG: This paragraph changed to assess comment 4 of referee 1, and to include the information that you requested that we add after reading her comment.]} For both programs, data were frequently collected on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics from birth until age 8. Further follow-ups were collected at ages 12, 15, 21, and 30. In addition, there is information from administrative criminal records, and from a full in-person medical assessment that included a survey and collection of bio specimens and measurements when the subjects were in their mid30s. Appendix~\ref{appendix:data} provides exact details on the timing of the difference data collections.\footnote{We also document the balance in observed baseline characteristics across the treatment and control groups after dropping the individuals for whom we have no crime or health information. There is substantial missing data for these outcomes, which we address using the methodology exposited in Appendix~\ref{appendix:methodology}.} Many control-group children in both ABC and CARE attended alternative formal childcare arrangements (75\% and 74\%, respectively).\footnote{The alternative arrangements were generally lower quality than ABC/CARE (see Appendix~\ref{appendix:tetanus} for details). In our main analysis, we compare treatment- and control-group children, irrespective of take-up of alternatives. In Appendix~\ref{appendix:cbaresultscont}, we address the problem of substitution bias \citep{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE,Kline_Walters_2016_QJE}. We disaggregate our analysis to distinguish treatment effects by type of alternative selected by the control group.}
 
 \section{Forecasting Life-cycle Costs and Benefits: Method} \label{section:cbamethodology}
 
@@ -174,7 +173,7 @@ F_{k,a}^0 \left( \cdot | \text{\textbf{ Fix }} \bm{X}_{k,a}^d = \bm{x}, \bm{B}_{
   &=&  F_{a} \left( \cdot  | \text{\textbf{ Fix }} \bm{X}_{k,a}^d = \bm{x}, \bm{B}_{k} = \bm{b}  \right), \label{eq:strucinvarianceF}
 \end{eqnarray}
 \end{subequations}
-where $F_{k,a}^j \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the distribution of $\bm{Z}$ for $\bm{\Omega}$ fixed at $\bm{\omega}$ and $F_a \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the age-$a$ distribution of the errors of the production functions, assumed to be common across treatment regimes and samples given $\bm{X}_{k,a}^d = \bm{x}$ and $\bm{B}_{k} = \bm{b}$. $\square$
+where $F_{k,a}^j \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the distribution of $\bm{Z}$ for $\bm{\Omega}$ fixed at $\bm{\omega}$ and $F_a \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the age-$a$ distribution of the errors of the production functions, assumed to be common across treatment regimes and samples given $\bm{X}_{k,a}^d = \bm{x}$ and $\bm{B}_{k} = \bm{b}$.\footnote{\textbf{[JLG: I added this footnote to assess comment 1 of referee 3, it includes your edits to my initial proposed footnote.]} This assumption could be generalized to hold conditionally on any set of covariates. For example, one could think of structural invariance conditional on linear or polynomial time trends.}$^\text{,}$\footnote{\textbf{[JLG: The exact same is true for this note for the case of comment 2 of referee 3.]} In addition, cross-equation structural invariance restrictions could in principle be imposed across outcomes. This is not possible in our case because data for forecasting each of our outcomes come from different sources. Researchers interested in applying this method to contexts where the data used to forecast provides several outcomes could include cross-equation restrictions in the testable implications that we derive from Assumption~\ref{ass:summary}.} $\square$
 \end{assumption}
 
 We clarify Assumption~\ref{ass:summary} with two remarks.
@@ -519,8 +518,6 @@ Parental labor income effects induced by the childcare subsidy are an important 
 
 Individuals in ABC/CARE could experience positive cohort effects that might (i) make them more productive and therefore experience wage growth; (ii) experience a negative shock such as an economic crisis and therefore experience a wage decline. Our estimates are robust when we vary annual growth and decay rates in labor income between $-0.5\%$ and $0.5\%$. This is consistent with the range of values in \citet{Lagakos_Moll_etal_2016_LifeCycle_NBER}.
 
-We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group were convicted of rape and one individual in the control group was convicted of murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we do not want our estimates to be based on a few exceptional crimes. The second is important because estimates of victimization costs are controversial because they are subjective (see  Appendix~\ref{appendix:crime-VI}). Our benefit/cost estimates are robust to these adjustments, even though crime is a major component of it. We also examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because healthier individuals survive longer, and treatment improves health conditions. Since this component is largely realized later in life and thus is heavily discounted, improvements in future medical care have a negligible effect on the estimated life-cycle benefits. Dropping this component or doubling the value of life does not have a major impact on our calculations.
-
 \begin{figure}[htpb!]
 \caption{Benefit/Cost Ratio and Internal Rate of Return when Accounting for Different Combinations of the Main Benefits}\label{figure:vennpooled}
 \centering
@@ -528,6 +525,8 @@ We also examine the sensitivity of our estimates to (i) dropping the most costly
 \footnotesize \justify
 Note: This figure presents all possible combinations of accounting for the benefits from the four major categories in our analysis. The non-overlapping areas present estimates arising from a single category as the benefit. Where multiple categories overlap, we account for benefits from each of the overlapping categories. The other components remain constant across all calculations and are the same as in Figure~\ref{figure:main}. Health combines QALYs (quality-adjusted life years) and health expenditure. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We put boxes around point estimates that are statistically significant at the $10\%$ level.
 \end{figure}
+
+We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group were convicted of rape and one individual in the control group was convicted of murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we do not want our estimates to be based on a few exceptional crimes. The second is important because estimates of victimization costs are controversial because they are subjective (see  Appendix~\ref{appendix:crime-VI}). Our benefit/cost estimates are robust to these adjustments, even though crime is a major component of it. We also examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because healthier individuals survive longer, and treatment improves health conditions. Since this component is largely realized later in life and thus is heavily discounted, improvements in future medical care have a negligible effect on the estimated life-cycle benefits. Dropping this component or doubling the value of life does not have a major impact on our calculations.
 
 Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses reported in Table~\ref{table:cba} of Appendix~\ref{appendix:sensitivity}, including the case where only one of the many streams we consider is the source of the benefit. We calculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize.  Overall, our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. Rather, it is the life-cycle benefits across multiple dimensions of human development.
 
@@ -574,15 +573,57 @@ The remaining exercises in Table~\ref{table:comparing} are: (i) increase the age
 
 Our methodology provides a more accurate estimate of the benefits and costs of the ABC/CARE program. We better quantify the effects of the experiment by considering the full array of benefits over the whole life cycle. We also better approximate the uncertainty of our estimates by considering both the sampling error in the experimental and auxiliary samples, the forecast error due to the interpolation and extrapolation, and the sensitivity of the estimates to externally specified parameters.
 
+\noindent \textbf{[JLG: The rest of the material in this section was added to assess comment 2 of referee 4. It already includes your comments to the initial material that I proposed to add as well as your questions on this material and the corresponding answers.]}
+
+The previous sensitivity studies focus on scenarios in which either a partial segment of the full life cycle is considered or the full lifecycle is taken into account but only for a subset of the outcomes that we analyze (e.g.,\ we consider sensitivity to dropping the benefits from crime or health as a whole).  We also study back-of-the-envelope calculations based on informal forecasts. It is clear that the inclusion of life-cycle benefits across several outcomes and the application of formal forecasting methodologies leads to more inclusive and certain estimates of social efficiency.
+
+In what is next we address how well would researchers do if they aimed to forecast life-cycle benefits applying our methodology but did not have access to data in the mid-30s. For example, suppose that a researcher had access to inputs of the production function that are experimentally shifted by the treatment only up to age 21. Studying the performance of our forecasting procedure under such situation is useful. Researchers willing to implement a formal forecasting methodology may face severe data limitations and our analysis can inform them on how precise could their forecast be if they based them on data from earlier segments of the life cycle.
+
+We present two analyses. First, an analysis where we limit $\bm{X}_{k,a}^d$ to contain PIAT (5-7) and years of education. Second, an analysis where we limit $\bm{X}_{k,a}^d$ to only contain lagged labor income. These scenarios are useful because researchers may have access to a test score as well as a measure of schooling or may only have a measure of labor income early in life with which they could initialize a forecast of autoregressive labor income. We do not present results based solely on a short-term test score as PIAT (5-7) because the results are extremely imprecise, which is consistent with the results in Table~\ref{table:bcsens} and warns practitioners against forecasting based on a short-term test score although this is commonly done \citep[e.g.][]{Kline_Walters_2016_QJE}.
+
+Figure~\ref{fig:labor-income-profilessens} shows the results from analyses by displaying labor income forecasts analogous to Figure~\ref{fig:labor-income-profiles} for the two sets of predictor variables. We do not vary the construction of the non-experimental samples used for forecasting or the background variables that we account for. \textbf{[JJH: Do you re-estimate the technology? What forecast equations do you run? Please clarify.] [JLG: I re-run the baseline procedure reestimating the technology for the case when the two more limited sets of predictors are used. Thus, I proceed as if were predicting labor income with the same method as we do in Section~\ref{section:cbamethodology} but we had a more limited set of inputs. I include this clarification in the next.]} We follow the steps in Section~\ref{sec:forecasting} and re-estimate the forecasting functions in the non-experimental sample as researchers would do if they were to forecast with these subsets of predictor variables. We then use the estimated functions to forecast in the experimental sample. 
+
+The empirical results indicate that PIAT and years of education provide a forecast that is imprecise but in the ballpark of the baseline forecast in Figure~\ref{fig:labor-income-profiles}. \textbf{[JJH: PIAT alone?] [JLG: As we write in the previous paragraph, this leads to results that are extremely imprecise. It leads to a completely distorted profile and the graph is hard to display and interpret.]} Lagged income on its own does not suffice for accurate forecasting of the treatment-control life-cycle differences. That is sensible because we initialize the forecast at age 21, where the treatment-control difference in labor income is not informative because many of the subjects---especially those in treatment---are still in school. Thus, while a forecast based on a short-term test scores does not suffice for an accurate forecast, a short-term test score together with education does provide an estimate in the  ballpark. Producing this estimate is relatively ``expensive'' because it requires completed education and that is a longer term measure. It would be unrealistic, however, to expect that a short-term test score would suffice to provide an adequate life-cycle forecast. 
+
+\noindent \textbf{[JJH: It's unclear what you did. Did you align the estimates of the production function and experiment? Remember if you only 21 years of data we can go either experiment or panel to age 35.]} 
+
+\noindent \textbf{[JLG: I replicated the same method as in the baseline methodology but restricted the predictors. I think that's what we want regarding showing how our methodology would be applied in a setting with shorter data follow up. You are right in that we could estimate prediction functions within the experiment to go up to age 30. However, we have dropped that a long ago because it is truly imprecise to estimate production functions within the experiment. Thus, I am using the same synthetic cohort of the baseline estimations to estimate production functions based on more limited sets of predictors and then forecast after age 21 in the experimental sample using these functions.]}
+
+\setcounter{figure}{4}
+\begin{sidewaysfigure}[!htbp]
+\centering
+\caption{Forecasted Labor Income Profiles for ABC/CARE Participants}\label{fig:labor-income-profilessens}
+\begin{subfigure}[h]{0.35\textwidth}
+		\centering
+		\caption{Males, Based on PIAT and Education}
+		\includegraphics[width=\textwidth]{output/labor_25-60_male_2}
+\end{subfigure}%
+\begin{subfigure}[h]{0.35\textwidth}
+		\centering
+		\caption{Males, Based on Lagged Labor Income} 
+		\includegraphics[width=\textwidth]{output/labor_25-60_male_3}
+\end{subfigure}
+\begin{subfigure}[h]{0.35\textwidth}
+		\centering
+		\caption{Females, Based on PIAT and Education} 
+		\includegraphics[width=\textwidth]{output/labor_25-60_female_2}
+\end{subfigure}%
+\begin{subfigure}[h]{0.35\textwidth}
+		\centering
+		\caption{Females, Based on Lagged Labor Income}
+		\includegraphics[width=\textwidth]{output/labor_25-60_female_3}
+\end{subfigure}
+\footnotesize \justify
+Note: Panels (a) and (b) displays the forecast life-cycle labor income profiles for ABC/CARE males by treatment status, analogous to the forecasts in Figure~\ref{fig:labor-income-profiles} but using either PIAT (5-7) and years of education as predictors or lagged labor income. Figure~\ref{fig:labor-income-profiles} uses PIAT (5-7), years of education as predictors, and lagged labor income. Panels (c) and (d) are analogous to (a) and (b) for females.
+\end{sidewaysfigure}
+
 \section{Summary} \label{section:conclusion}
 
 \noindent This paper presents a template for constructing economically interpretable summaries of the multiple treatment effects generated from a randomized evaluation of a high-quality, widely emulated early childhood program with follow-up through the mid 30s. We go beyond the usual practice of reporting batteries of treatment effects. We report the costs and monetize the treatments across numerous domains. We estimate the tax-adjusted internal rate of return and the benefit/cost ratio of the program to assess the social efficiency of the program.
 
 We use auxiliary information and economic models to guide monetization of treatment effects and to extrapolate the measured benefits and costs to the full life cycles of participants. We account for model estimation and forecast error and conduct extensive sensitivity analyses of our estimates to alternative assumptions and methodologies. Under a variety of plausible assumptions, we estimate that the tax-adjusted internal rate of return of the program ranges from 8\% to 18.3\%. These estimates demonstrate the social profitability of ABC/CARE.
 
-We conclude with a cautionary note. The program we study was targeted to a disadvantaged, predominately African-American population in a university town in North Carolina. Blind generalization of our findings to other populations is clearly not warranted. In particular, there is no support in this study for universal application of ABC/CARE across all socio-economic groups.
-
-However, the essential features of the ABC/CARE approach are currently in wide use in a variety of early childhood intervention programs that target disadvantaged children. In this sense, our analysis has lessons of general applicability to disadvantaged populations. Our study indicates what is possible and that the possibilities are substantial.
+\textbf{[JLG: This paragraph slightly changed to assess comment 5 of referee 3.]} We conclude with a cautionary note. The program we study was targeted to a disadvantaged, predominately African-American, relatively homogenous population in a university town in North Carolina. Blind generalization of our findings to other populations is clearly not warranted. In particular, there is no support in this study for universal application of ABC/CARE across all socio-economic groups which could exhibit vastly heterogenous returns to high-quality early childhood education. However, the essential features of the ABC/CARE approach are currently in wide use in a variety of early childhood intervention programs that target disadvantaged children. In this sense, our analysis has lessons of general applicability to disadvantaged populations. Our study indicates what is possible and that the possibilities are substantial.
 
 %References
 \singlespace
